Fix navigation being too wide

--- a/style/main.css
+++ b/style/main.css
@@ -271,6 +271,10 @@ div.nav-element.current a{
         
     }
 
+    #nav{
+        width: 90vw;
+    }
+
     #nav .pages{
         display: block;
     }
